# gyscnSpirder

./: Spider.py  pyproject.toml  readme.md  requirements.txt
src/gyscnspirder/: __init__.py
