[project]
name = "gyscnSpirder"
version = "0.1.0"
description = "供应商网爬虫"
authors = [{ name = "u-wlkjyy", email = "wlkjyy@vip.qq.com" }]
dependencies = ["fontTools", "Pillow", "ddddocr", "lxml", "requests", "numpy"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Unknown" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
